# claco

./: .gitignore  Cargo.toml  README.md  find_cursor.rs  serve-agent.ts  story.rs  test-cell.rs  test_pty.rs  test_term.rs
claco-acp-agent/: Cargo.toml
claco-acp-agent/src/: main.rs
claco-pty/: Cargo.toml
claco-pty/src/: lib.rs  process.rs  pty.rs
claco-rec/: Cargo.toml
claco-rec/src/: main.rs  record.rs
claco-sdk/: Cargo.toml  parse_test.rs  test
claco-sdk/src/: lib.rs  main.rs
claco-termulator/: Cargo.toml
claco-termulator/src/: attach.rs  frame_conv.rs  ipc.rs  lib.rs  main.rs  run.rs  session.rs  tui.rs  view.rs
zed-claco/: Cargo.toml  README.md  extension.toml  extension.wasm
zed-claco/src/: lib.rs
