[package]
name = "claco-acp-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9.4"
async-trait = "0.1.89"
claco-sdk = { version = "0.1.0", path = "../claco-sdk" }
env_logger = "0.11.9"
futures = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
