[package]
name = "claco-termulator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "claco-termulator"
path = "src/main.rs"

[dependencies]
alacritty_terminal = "0.25.1"
claco-pty = { path = "../claco-pty" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
arboard = "3.4.1"
serde_json = "1.0"
regex = "1"
